Bug 241125 - Win32: compilation fails for aprs plugin
Summary: Win32: compilation fails for aprs plugin
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: 1.5 (KDE 4.10)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-08 21:27 UTC by Michael Drüing
Modified: 2012-12-15 09:21 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Drüing 2010-06-08 21:27:45 UTC
Version:           unspecified (using Devel) 
OS:                MS Windows

Currently, the aprs plugin doesn't compile on Win32/MSVC because it tries to include a private Qt header file which doesn't get installed by the emerge build system.

I have disabled the plugin in CMakeLists.txt on Win32 for now, it should be re-enabled as soon as the private headers get correctly installed (or another solution is found)

Reproducible: Always
Comment 1 wjhns25 2010-07-02 16:02:40 UTC
Err...  which header?  I'm not a windows build expert, but I'm confused as to where the problem lies?  You mean you can't compile it because there are .h files that don't get installed?
Comment 2 Dennis Nienhüser 2010-07-02 17:34:26 UTC
It is

qextserialport.h
144:#include <QtCore/private/qwineventnotifier_p.h>

which is (atm) not installed by the emerge tool kde-windows uses.
Comment 3 wjhns25 2010-07-07 19:49:06 UTC
SVN commit 1147243 by hardaker:

BUG: 241125 - remove the private Qt include which is not needed anyway

 M  +0 -5      CMakeLists.txt  
 M  +0 -1      aprs/qextserialport.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1147243
Comment 4 wjhns25 2010-07-07 19:50:05 UTC
It doesn't seem to be needed, so I removed it's include and re-enabled the plugin on windows.
Comment 5 Dennis Nienhüser 2010-07-30 19:53:03 UTC
The private header include is needed, currently the aprs plugin does not compile on windows:

qextserialport.h:297: error: ISO C++ forbids declaration of 'QWinEventNotifier' with no type"
Comment 6 Christian Ehrlicher 2010-09-26 19:08:43 UTC
SVN commit 1179978 by chehrlic:

reapply r1136038
CCBUG: 241125

 M  +2 -2      CMakeLists.txt  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1179978
Comment 7 Dennis Nienhüser 2010-11-12 23:32:41 UTC
SVN commit 1196283 by nienhueser:

reapply r1136038. Backport of commit 1179978.
CCBUG: 241125


 M  +2 -0      CMakeLists.txt  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1196283
Comment 8 Pino Toscano 2012-12-15 09:11:15 UTC
Git commit f8ea7ba60fa3d3bca313e1c3b440ed7173245cc8 by Pino Toscano.
Committed on 30/11/2012 at 19:09.
Pushed by pino into branch 'master'.

aprs: use external QextSerialPort for TTY reading

Instead of embedding an (old) copy of the QextSerialPort library, find for an external one;
only if found enable the reading from TTY, which is otherwise disabled (leaving its configuration tab disabled).

The drop of the internal QextSerialPort should also fix all the portability issues,
since the plugin itself does not use any OS-dependent API, and it is then reenabled unconditionally.
Hence,
Related: bug 237931, bug 242039
should now be fixed, and
should not happen anymore.

REVIEW: 107536

A  +16   -0    cmake/modules/FindQextSerialPort.cmake
M  +1    -3    src/plugins/render/CMakeLists.txt
M  +17   -2    src/plugins/render/aprs/AprsPlugin.cpp
M  +2    -1    src/plugins/render/aprs/AprsTTY.cpp
M  +10   -13   src/plugins/render/aprs/CMakeLists.txt
M  +2    -2    src/plugins/render/aprs/aprsconfig.h.in
D  +0    -979  src/plugins/render/aprs/posix_qextserialport.cpp
D  +0    -262  src/plugins/render/aprs/qextserialport.cpp
D  +0    -338  src/plugins/render/aprs/qextserialport.h
D  +0    -21   src/plugins/render/aprs/qextserialport_global.h
D  +0    -874  src/plugins/render/aprs/win_qextserialport.cpp

http://commits.kde.org/marble/f8ea7ba60fa3d3bca313e1c3b440ed7173245cc8